--- a/UMRReqruitmentTest/package.json
+++ b/UMRReqruitmentTest/package.json
@@ -9,28 +9,24 @@
   "description": "UMRReqruitmentTest",
   "devDependencies": {
     "jasmine-core": "^2.4.1",
-    "karma": "^0.13.22",
-    "karma-chrome-launcher": "^1.0.1",
-    "karma-coverage": "^1.0.0",
-    "karma-jasmine": "^1.0.2",
-    "remap-istanbul": "^0.6.4",
+    "typescript": "^1.8.10",
     "typings": "^1.0.4",
     "wdio-jasmine-framework": "^0.1.9",
-    "webdriverio": "^4.0.9",
-    "typescript": "^1.8.10"
+    "webdriverio": "^4.0.9"
   },
   "main": "app.js",
   "name": "umrreqruitment-test",
   "scripts": {
-    "postinstall": "typings install",
-    "del": "del \"test\\*.js\" \"test\\*.js.map\" /f /q /s",
-    "tsc": "node_modules/.bin/tsc",
     "build": "npm run del | npm run tsc",
-    "typings": "typings",
-    "wdio": "node_modules/.bin/wdio",
+    "del": "del \"test\\*.js\" \"test\\*.js.map\" /f /q /s",
+    "postinstall": "typings install",
+    "preinstall": "npm install karma-cli -g",
     "selenium-server": "java -jar ../selenium-server-standalone-2.53.0.jar",
     "server": "npm run selenium-server",
-    "start": "npm run build | npm run wdio"
+    "start": "npm run build | npm run wdio",
+    "tsc": "node_modules/.bin/tsc",
+    "typings": "typings",
+    "wdio": "node_modules/.bin/wdio"
   },
   "version": "0.0.0"
 }
